test/fail/verification-asserts.mo
assert:system true;
assert:1:async true;
assert:func true;
assert:return true;
